# SSEC

./: CMakeLists.txt  README.md  fuzz_compression_harness.c  fuzz_decompress_harness.c  main.c
menu/: menu_logic.c  menu_logic.h  utility_functions.c  utility_functions.h
